# ChangeLog for media-radio/ax25-tools
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/ax25-tools/ChangeLog,v 1.1 2003/06/19 18:54:08 rphillips Exp $

*ax25-tools-0.0.8 (19 Jun 2003)

  19 Jun 2003; Ryan Phillips <rphillips@gentoo.org> :

  Created by Paul Kronenwetter. Fixes Bug #12232