@@ -1,6 +1,11 @@
 # ChangeLog for media-radio/ax25-tools
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/ax25-tools/ChangeLog,v 1.1 2003/06/19 18:54:08 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/ax25-tools/ChangeLog,v 1.2 2003/07/31 20:04:41 rphillips Exp $
+
+*ax25-tools-0.0.8-r1 (31 Jul 2003)
+
+  31 Jul 2003; Ryan Phillips <rphillips@gentoo.org> ax25-tools-0.0.8-r1.ebuild files/*.rc:
+  added Samuel Greenfeld's additions. #23931
 
 *ax25-tools-0.0.8 (19 Jun 2003)
 
